# cpf_br

./: .gitignore  README.md  pyproject.toml
cpf_br/: cpf.py  validation.py
cpf_br/tests/: cpf_api_test.py  cpf_digits_validation_test.py  cpf_validation_test.py
cpfbr/: __init__.py  __main__.py  cpf.py  validation.py
cpfbr/tests/: cpf_api_test.py  cpf_format_validation_test.py  cpf_validation_test.py
tests/: cli_test.py  cpf_api_test.py  cpf_digits_validation_test.py  cpf_format_validation_test.py  cpf_test.py  cpf_validation_test.py
